--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "airtable": "^0.11.4",
+    "chart.js": "^3.7.1",
     "lucide-react": "^0.45.0",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.0.0",
     "webfontloader": "^1.6.28"
   },
@@ -27,6 +29,7 @@
     "react-router-dom": "^6.3.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
-    "vite": "^2.9.5"
+    "vite": "^2.9.5",
+    "vite-plugin-pwa": "^0.12.0"
   }
 }
