--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.45.0",
     "react": "^18.0.0",
     "react-chartjs-2": "^4.1.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.0.0",
     "webfontloader": "^1.6.28"
   },
