--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^8.20.2",
     "@react-three/fiber": "^7.0.26",
     "@types/three": "^0.141.0",
+    "@svgdotjs/svg.js": "^3.1.2",
     "airtable": "^0.11.4",
     "chart.js": "^3.7.1",
     "lucide-react": "^0.45.0",
@@ -22,6 +23,7 @@
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.0.0",
     "three": "^0.139.0",
+    "vite-plugin-svgr": "^2.1.0",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
