--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "pwa": "npm run build && npx serve dist"
   },
   "dependencies": {
+    "@svgdotjs/svg.js": "^3.1.2",
     "airtable": "^0.11.4",
     "chart.js": "^3.7.1",
     "lucide-react": "^0.45.0",
@@ -16,6 +17,7 @@
     "react-chartjs-2": "^4.1.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.0.0",
+    "vite-plugin-svgr": "^2.1.0",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
