--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "pwa": "npm run build && npx serve dist"
+    "pwa": "npm run build && npx serve dist --single"
   },
   "dependencies": {
     "airtable": "^0.11.4",
@@ -19,6 +19,7 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -32,6 +33,7 @@
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
     "vite": "^2.9.5",
-    "vite-plugin-pwa": "^0.12.0"
+    "vite-plugin-pwa": "^0.12.0",
+    "workbox-window": "^6.5.3"
   }
 }
