--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.0.0",
     "react-chartjs-2": "^4.1.0",
     "react-confetti": "^6.1.0",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^18.0.0",
     "webfontloader": "^1.6.28"
   },
@@ -22,6 +23,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.0",
+    "@types/react-detect-offline": "^2.4.1",
     "@types/react-dom": "^18.0.0",
     "@types/webfontloader": "^1.6.34",
     "@vitejs/plugin-react": "^1.3.0",
