--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "pwa": "npm run build && npx serve dist --single"
   },
   "dependencies": {
+    "@react-three/cannon": "^5.1.0",
+    "@react-three/drei": "^8.20.2",
+    "@react-three/fiber": "^7.0.26",
+    "@types/three": "^0.141.0",
     "airtable": "^0.11.4",
     "chart.js": "^3.7.1",
     "lucide-react": "^0.45.0",
@@ -17,6 +21,7 @@
     "react-confetti": "^6.1.0",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.0.0",
+    "three": "^0.139.0",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
